--- a/index.html
+++ b/index.html
@@ -54,7 +54,46 @@
                         <div class="line"></div>
                     </nav>
                 </section>
-                <h1>jj</h1>
+                <section class="section_2">
+                    <div class="section_2_image">
+                        <img src="./images/Dining 2.png" alt="This is an image">
+                    </div>
+
+                    <div class="section_2_description">
+
+                        <span>RESIDENCE FEATURES</span>
+                        <hr>
+                        <p>
+                            This one-bedroom residence includes an Entrance hall/cloakroom, utility cupboard, coffee/champagne bar, reception room, dining area, kitchen, master bedroom with en-suite bathroom, powder room, state of the art security system, a large storeroom, wine cellar, underground parking space at basement level, and terrace access to <span>One Hyde Park’s</span> extensive facilities and amenities are available exclusively to residents. 
+
+                            The apartment also features the use of mirrors and reflective finishes maximizes space and adds depth plus texture, providing a modern interpretation of city living.
+                        </p>
+                        <button>Explore</button>
+
+                    </div>
+
+
+                </section>
+
+                <section class="section_3">
+                    <div class="section_3_image">
+                        <img src="./images/Bedroom 2.png" alt="This is an image">
+                    </div>
+
+                    <div class="section_3_description">
+
+                        <span>RESIDENCE SUMMARY</span>
+                        <hr>
+                        <p>
+                            Interior designed by Candy & Candy, with Italian marble bathroom and extensive wardrobe space, this one-bedroom residence is one of the finest of its kind in the building, overlooking the trees of the planted courtyard below and on to a city view of Knightsbridge beyond. <br>
+                            <br>
+                            In addition to the highest standard of internal specification, including triple glazed windows, solid oak joinery, chilled ceilings, and a state‐of‐the‐art Building Management System, the apartment benefits from the myriad services, leisure and entertainment facilities offered exclusively to the residents of this exceptional building. <br>
+                            <br>
+                            The unit also includes provisional writing for audio-visual systems and programmed lighting controls which will enable residents to select their preferred suppliers for all their personal audio-visual requirements.
+                        </p>
+
+                    </div>
+                </section>
             </main>
         
         
