Añadí sección 4 y el footer

--- a/index.html
+++ b/index.html
@@ -94,11 +94,66 @@
 
                     </div>
                 </section>
+                <div class="section_4">
+                    <h1>Master Bedroom</h1>
+                    <p>The master bedroom features a king sized head board built right into the wall, with a rich soft carpet and blackout blinds, and double coatded windows to ensure silence and privacy.
+                    </p>
+                    <div class="section_4-line"></div>
+                    <h1>count</h1>
+                </div>
+                <section class="section_5">
+
+                </section>
+                <section class="section_6">
+
+                </section>
+                <section class="section_7">
+
+                </section>
+                <section class="section_8">
+
+                </section>
+                <section class="section_9">
+
+                </section>
+                <section class="section_10">
+
+                </section>
             </main>
         
         
-        <footer>
-
+        <footer class="footer">
+            <div class="footer_div-1">
+                <h1>Real Estate</h1>
+                <p>33 Margaret Street,<br>
+                    London <br>
+                    W1G 0JD <br>
+                    +44 (0) 20 7499 8644 <br>
+                </p>
+            </div>
+            <div class="footer_div-2">
+                <ul>
+                    <li>Company</li>
+                    <li><a href="">Leadership</a></li>
+                    <li><a href="">Approach</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Careers</a></li>
+                </ul>
+                <ul>
+                    <li>Navigation</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Listings</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+                <ul class="last-list">
+                    <li>Connect</li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">LinkedIns</a></li>
+                </ul>
+            </div>
         </footer>       
     </body>
 </html>
