--- a/index.html
+++ b/index.html
@@ -102,10 +102,66 @@
                     <h1>count</h1>
                 </div>
                 <section class="section_5">
+                    <div class="section_5_img">
+                        <img src="./images/topview.png" alt="This is an image">
+                    </div>
+                    <div class="section_5_description">
+                        <span>FLOOPLANS</span>
+                        <hr>
+                        <p>
+                            The exceptional collaboration between leading architects, 
+                            designers, artists, and hoteliers that One Hyde Park:
+                            The Residences at Mandarin Oriental, London, delivers ultimate 
+                            perfection and a unique experience on every level.
+                            <br>
+                            <br>
+                        </p>
+                        <p>
+                            The vision of Candy & Candy has become a reality in the creation of the most exquisite interiors for the most exclusive address in the world. Each apartment has been designed to complement the beautiful and carefully considered proportions of the architects` design and every detail has been accounted for to ensure the experience of life at One Hyde Park is unsurpassed. 
+                            <br>
+                            <br>
 
+                        </p>
+                        <p>
+                            Award-winning interior designers Candy & Candy have 
+                            exclusively designed all the communal areas including the spa
+                            and recreation facilities, the grand double-height reception 
+                            space, Park Library, and Serpentine Suite as well as exclusively
+                            designing the interior base build of each apartment.
+                        </p> 
+                        
+                        <button>Enquire</button>
+                    </div>
                 </section>
                 <section class="section_6">
-
+                    <div class="section_6_img">
+                        <img src="./images/outsideview.png" alt="This is an image">
+                    </div>
+                    <div class="section_6_description">
+                        <span>ABOUT ONE HYDE PARK</span>
+                        <hr>
+                        <p>
+                            The exceptional collaboration between leading architects, 
+                            designers, artists, and hoteliers that One Hyde Park:
+                            The Residences at Mandarin Oriental, London, delivers ultimate 
+                            perfection and a unique experience on every level.
+                        </p>
+                        <br>
+                        <br>
+                        <p>
+                            The vision of Candy & Candy has become a reality in the creation of the most exquisite interiors for the most exclusive address in the world. Each apartment has been designed to complement the beautiful and carefully considered proportions of the architects` design and every detail has been accounted for to ensure the experience of life at One Hyde Park is unsurpassed. 
+                        </p>
+                        <br>
+                        <br>
+                        <p>
+                            Award-winning interior designers Candy & Candy have 
+                            exclusively designed all the communal areas including the spa
+                            and recreation facilities, the grand double-height reception 
+                            space, Park Library, and Serpentine Suite as well as exclusively
+                            designing the interior base build of each apartment. 
+                        </p>
+                        <button></button>
+                    </div>
                 </section>
                 <section class="section_7">
 
