creé archivo de responsive

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width = content-device, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="responsive_sm.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/df0a2f9f24.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -165,13 +168,13 @@
                 </section>
                 <section class="section_7">
                     <div class="section_7__div--1">
-                        <img src="/images/Lobby Img.png" alt="This is a lobby image">
+                        <img src="./images/Lobby Img.png" alt="This is a lobby image">
                     </div>
                     <div class="section_7__div--2">
-                        <img src="/images/Squash Courts Img.png" alt="">
-                        <img src="/images/Second Lobby Img.png" alt="">
-                        <img src="/images/Fitness Centre Img.png" alt="">
-                        <img src="/images/Spa Img 2.png" alt="">
+                        <img src="./images/Squash Courts Img.png" alt="">
+                        <img src="./images/Second Lobby Img.png" alt="">
+                        <img src="./images/Fitness Centre Img.png" alt="">
+                        <img src="./images/Spa Img 2.png" alt="">
                     </div>
                 </section>
                 <section class="section_8">
@@ -215,7 +218,7 @@
                 </section>
                 <section class="section_9">
                     <div class="section_9__div--1">
-                        <img src="/images/Living.png" alt="">
+                        <img src="./images/Living.png" alt="">
                     </div>
                     <div class="section_9__div--2">
                         <form action="">
