--- a/index.html
+++ b/index.html
@@ -268,6 +268,9 @@
                     <li><a href="">LinkedIns</a></li>
                 </ul>
             </div>
-        </footer>       
+        </footer>
+        <div class="credits">
+            <span><strong> Designed by <span class="name">Benjamin Hoppe</span> and developed by <span class="name">J.David Sarmiento</span> </strong></span>
+        </div>   
     </body>
 </html>
