añadí iconos de flechas a la primera galería

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
                     <p>The master bedroom features a king sized head board built right into the wall, with a rich soft carpet and blackout blinds, and double coatded windows to ensure silence and privacy.
                     </p>
                     <div class="section_4-line"></div>
-                    <h1>count</h1>
+                    <div class="counter">
+                        <button class="previous_button"><i class="fas fa-arrow-left"></i></button>
+                        <h1 class="counter_number">1</h1>
+                        <button class="next_button"><i class="fas fa-arrow-right"></i></button>
+                    </div>   
                 </div>
                 <section class="section_5">
                     <div class="section_5_img">
