creé archivo js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/df0a2f9f24.js" crossorigin="anonymous"></script>
+        <script src="./gallery.js"></script>  
     </head>
     <body>
         
@@ -80,7 +81,7 @@
 
                 <section class="section_3">
                     <div class="section_3_image">
-                        <img src="./images/Bedroom 2.png" alt="This is an image">
+                        <img class="imagen" src="./images/Bedroom 2.png" alt="This is an image">
                     </div>
 
                     <div class="section_3_description">
@@ -91,7 +92,6 @@
                             Interior designed by Candy & Candy, with Italian marble bathroom and extensive wardrobe space, this one-bedroom residence is one of the finest of its kind in the building, overlooking the trees of the planted courtyard below and on to a city view of Knightsbridge beyond. <br>
                             <br>
                             In addition to the highest standard of internal specification, including triple glazed windows, solid oak joinery, chilled ceilings, and a state‐of‐the‐art Building Management System, the apartment benefits from the myriad services, leisure and entertainment facilities offered exclusively to the residents of this exceptional building. <br>
-                            
                         </p>
 
                     </div>
@@ -101,7 +101,7 @@
                     <p>The master bedroom features a king sized head board built right into the wall, with a rich soft carpet and blackout blinds, and double coatded windows to ensure silence and privacy.
                     </p>
                     <div class="section_4-line"></div>
-                    <div class="counter">
+                    <div class="counter" id="counter">
                         <button class="previous_button"><i class="fas fa-arrow-left"></i></button>
                         <h1 class="counter_number">1</h1>
                         <button class="next_button"><i class="fas fa-arrow-right"></i></button>
@@ -275,6 +275,7 @@
         </footer>
         <div class="credits">
             <span><strong> Designed by <span class="name">Benjamin Hoppe</span> and developed by <span class="name">J.David Sarmiento</span> </strong></span>
-        </div>   
+        </div> 
+
     </body>
 </html>
