--- a/index.html
+++ b/index.html
@@ -120,7 +120,13 @@
                     <div class="section_4-line"></div>
                     <div class="counter" id="counter">
                         <button class="previous_button"><i class="fas fa-arrow-left"></i></button>
-                        <h1 class="counter_number">1</h1>
+                        <div class="numbers-counter">
+                            <h1 class="counter_number item active">1/5</h1>
+                            <h1 class="counter_number item">2/5</h1>
+                            <h1 class="counter_number item">3/5</h1>
+                            <h1 class="counter_number item">4/5</h1>
+                            <h1 class="counter_number item">5/5</h1>
+                        </div>
                         <button class="next_button"><i class="fas fa-arrow-right"></i></button>
                     </div>   
                 </div>
