--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" href="responsive_sm.css">
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <script src="https://kit.fontawesome.com/df0a2f9f24.js" crossorigin="anonymous"></script>
+
          
     </head>
     <body>
@@ -83,19 +85,19 @@
                     <div class="slider">
                         <div class="slider-items">
                             <div class="section_3_image item active">
-                                <img class="imagen" src="./images/Bedroom 2.png" alt="This is an image">
+                                <img  class="animate__animated animate__fadeInUp"  class="imagen"  src="./images/Bedroom 2.png" alt="This is an image">
                             </div>
                             <div class="item">
-                                <img class="imagen" src="./images/kitchen.png" alt="This is an image">
+                                <img class="animate__animated animate__fadeInUp" class="imagen" src="./images/kitchen.png" alt="This is an image">
                             </div>
                             <div class="item">
-                                <img class="imagen" src="./images/hallway.png" alt="This is an image">
+                                <img class="animate__animated animate__fadeInUp"  class="imagen" src="./images/hallway.png" alt="This is an image">
                             </div>
                             <div class="item">
-                                <img class="imagen" src="./images/bedroom.png" alt="This is an image">
+                                <img class="animate__animated animate__fadeInUp"  class="imagen" src="./images/bedroom.png" alt="This is an image">
                             </div>
                             <div class="item">
-                                <img class="imagen" src="./images/bedroom 4.png" alt="This is an image">
+                                <img class="animate__animated animate__fadeInUp"  class="imagen" src="./images/bedroom 4.png" alt="This is an image">
                             </div>
                         </div>
                     </div>
